Fix body overflow issue

--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -1,5 +1,4 @@
 .container-fluid {
-    padding: 0;
     height: 100%;
 }
 
